reviews. templates refactoring
