# app/handler.go
@@ -23,24 +23,42 @@ func (s *apiserver) registerHandlers() {
 	allAuthorization := s.authorizationInterceptor(UserRoleExpert, UserRoleAdmin)
 	adminAuthorization := s.authorizationInterceptor(UserRoleAdmin)
 
+	//
+	// Admin Auth
+	//
 	s.engine.GET("/admin", authentication, s.webIndexPage)
 	s.engine.POST("/admin/login", s.webAdminLogin)
 	s.engine.GET("/admin/login", s.webAdminGetLoginPage)
-
 	s.engine.GET("/admin/logout", s.webAdminLogout)
 
+	//
+	// Admin Expert
+	//
 	s.engine.GET("/admin/expert", authentication, adminAuthorization, s.webAdminExpertList)
 	s.engine.POST("/admin/expert", authentication, adminAuthorization, s.webAdminExpertList)
+	s.engine.GET("/admin/expert/:expertId", authentication, adminAuthorization, s.webAdminExpertItem)
 
 	s.engine.PUT("/admin/expert/:expertId/block", authentication, adminAuthorization, s.webAdminExpertBlock)
 	s.engine.PUT("/admin/expert/:expertId/activate", authentication, adminAuthorization, s.webAdminExpertActivate)
 	s.engine.PUT("/admin/expert/:expertId/password", authentication, adminAuthorization, s.webAdminUpdateExpertPassword)
 	s.engine.DELETE("/admin/expert/:expertId", authentication, adminAuthorization, s.webAdminExpertDelete)
 
+	//
+	// Admin Requisition
+	//
 	s.engine.GET("/admin/requisition", authentication, allAuthorization, s.webAdminRequisitionList)
 	s.engine.POST("/admin/requisition", authentication, allAuthorization, s.webAdminRequisitionList)
+	s.engine.GET("/admin/requisition/:requisitionId", authentication, allAuthorization, s.webAdminRequisitionItem)
 	s.engine.PUT("/admin/requisition/:requisitionId/take", authentication, allAuthorization, s.webAdminRequisitionTake)
 	s.engine.PUT("/admin/requisition/:requisitionId/complete", authentication, allAuthorization, s.webAdminRequisitionComplete)
+
+	//
+	// Admin Review
+	//
+	s.engine.GET("/admin/review", authentication, allAuthorization, s.webAdminReviewList)
+	s.engine.POST("/admin/review", authentication, allAuthorization, s.webAdminReviewList)
+	s.engine.GET("/admin/review/:reviewId", authentication, allAuthorization, s.webAdminReviewItem)
+
 	//
 	// Main API
 	//
@@ -61,6 +79,9 @@ func (s *apiserver) registerHandlers() {
 
 	s.engine.POST("/api/v1/requisition", s.cors, s.apiRequisitionCreate)
 	s.engine.OPTIONS("/api/v1/requisition", s.cors)
+
+	s.engine.POST("/api/v1/review", s.cors, s.apiReviewConfirm)
+	s.engine.OPTIONS("/api/v1/review", s.cors)
 
 	//
 	// Service API
