# app/representation/representation_api.go
@@ -1,8 +1,9 @@
 package representation
 
 const (
-	GenderMale   = "male"
-	GenderFemale = "female"
+	GenderMale     = "male"
+	GenderFemale   = "female"
+	GenderNoMatter = "no_matter"
 
 	FeedbackTypePhone    = "phone"
 	FeedbackTypeViber    = "viber"
@@ -12,8 +13,9 @@ const (
 )
 
 var allowedGender = map[string]bool{
-	GenderMale:   true,
-	GenderFemale: true,
+	GenderMale:     true,
+	GenderFemale:   true,
+	GenderNoMatter: true,
 }
 
 var allowedFeedbackType = map[string]bool{
@@ -52,7 +54,7 @@ type CreateRequisitionRequest struct {
 	Phone                string `json:"phone" description:"Validation: required 10 digits"`
 	Diagnosis            string `json:"diagnosis" description:"Validation: only allowed keys from /api/v1/diagnosis endpoint"`
 	DiagnosisDescription string `json:"diagnosisDescription" description:"Just diagnosis description text"`
-	ExpertGender         string `json:"expertGender" description:"Validation: 'male' or 'female'"`
+	ExpertGender         string `json:"expertGender" description:"Validation: 'male', 'female', 'no_matter'"`
 	FeedbackType         string `json:"feedbackType" description:"Validation: 'skype', 'zoom', 'phone', 'viber', 'telegram' allowed only"`
 	FeedbackContact      string `json:"feedbackContact" description:"Validation: could be empty only if 'phone' feedback type specified" maximum:"128"`
 	FeedbackTime         string `json:"feedbackTime" description:"Validation: 8:00, 13:00, 16:00"`
@@ -62,4 +64,17 @@ type CreateRequisitionRequest struct {
 
 type CreateRequisitionResponse struct {
 	ID string `json:"id" description:"Just requisition's identifier"`
+}
+
+type ConfirmReviewRequest struct {
+	PlatformReview     string `json:"platform_review" description:"Platform review"`
+	ConsultationCount  int    `json:"consultation_count" description:"Consultation count"`
+	ConsultationReview string `json:"consultation_review" description:"Consultation satisfaction"`
+	ExpertPoint        string `json:"expert_point" description:"Expert point: min - 1, max - 10"`
+	ExpertReview       string `json:"expert_review" description:"Expert work review"`
+	Token              string `json:"-"`
+}
+
+type ConfirmReviewResponse struct {
+	ID string `json:"id" description:"Just review's identifier"`
 }
